--- a/src/app/productCheckout.html
+++ b/src/app/productCheckout.html
@@ -22,7 +22,7 @@
 	  		</th>
 	    </tr>
 		<tr  *ngFor="#info of CartItems" class="ng-binding">
-			<td><img src="src/app/img/products/{{info.code}}.jpg" > </td>
+			<td><img src="../src/app/img/products/{{info.code}}.jpg" > </td>
 			<td style='width:60%'>
 				{{info.name}}
 				<p class="ng-binding">{{info.description}}</p>
